aws_vpc_subnet_public.tf
resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.vpc_poc.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "us-east-1a"
}
